# Homework

./: .gitignore  DOCS.md  README.md  requirements.txt  setup.cfg  setup.py
Narek Arenyan/: file.txt
Narek Arsenyan/: README.md  Task1.py  Task10.py  Task11.py  Task2.py  Task3.py  Task4.py  Task5.1.py  Task5.2.py  Task5.3.py  Task5.4.1.py  Task5.4.2.1.py  Task5.4.2.2.py  Task5.5.py  Task5.6.py  Task5.7.md  Task5.py  Task6.1.py  Task6.2.py  Task6.3.py  Task6.4.py  Task6.6.py  Task6.7.py  Task6.8.py  Task6.py  Task7.1.py  Task7.10.py  Task7.11.py  Task7.2.py  Task7.3.py  Task7.4.py  Task7.5.py  Task7.6.py  Task7.7.py  Task7.8.py  Task7.9.py  Task7.py  Task8.1.py  Task8.2.py  Task8.py  (+3 more)
Narek Arsenyan/rss_reader_package/: cache_worker.py  feed_fetcher.py  format_converter.py
Narek Arsenyan/rss_reader_package/mocks/: raw_feed_mock.py
Narek Arsenyan/rss_reader_package/tests/: test_date.py  test_feed.py  test_format_converter.py  test_link.py
Narek Arsenyan/rss_reader_package/utils/: config.py  count_files.py
rss_reader_package/: cache_worker.py  date.py  feed.py  feed_fetcher.py  format_converter.py  link.py  rss_reader.py
rss_reader_package/mocks/: raw_feed_mock.py
rss_reader_package/tests/: test_count_files.py  test_feed.py  test_feed_fetcher.py  test_format_converter.py
rss_reader_package/utils/: count_files.py  exceptions.py  version.py
