[pycodestyle]
count = False
ignore = E731
max-line-length = 120
statistics = True

[metadata]
name = rss_reader
version = 1.5.0

[options]
packages =
            rss_reader_package
            rss_reader_package.utils
install_requires =
                    appdirs
                    yattag
                    EbookLib
                    beautifulsoup4
                    requests

[options.entry_points]
console_scripts =
    rss-reader = rss_reader_package.rss_reader:rss_reader_func

